feat: added search api and block transaction speed
