# swagger/algosearch.json
@@ -1111,6 +1111,57 @@
         }
       }
     },
+    "/v1/algod/ledger/supply": {
+      "get": {
+        "security": [],
+        "summary": "Get the current supply reported by the ledger through Algod API",
+        "description": "Get the current supply reported by the ledger through Algod API.",
+        "tags": [
+          "Algod",
+          "Ledger"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "current_round": {
+                      "type": "number",
+                      "description": "current round"
+                    },
+                    "online-money": {
+                      "type": "number",
+                      "description": "online money"
+                    },
+                    "total-money": {
+                      "type": "number",
+                      "description": "total money"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/InternalServerErrorResponse"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/current-round": {
       "get": {
         "security": [],
@@ -1401,7 +1452,7 @@
     "/v1/transactions/{id}": {
       "get": {
         "security": [],
-        "summary": "Get Round from API by Transaction ID",
+        "summary": "Get Transaction from API by Transaction ID",
         "description": "Retrieves the transaction data from API by Transaction ID",
         "tags": [
           "Transaction"
@@ -1508,6 +1559,235 @@
                       "$ref": "#/components/schemas/TransactionData"
                     }
                   ]
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/InternalServerErrorResponse"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/transactions/acct/{id}/count": {
+      "get": {
+        "security": [],
+        "summary": "Get Transaction Count from API by Account ID",
+        "description": "Retrieves the number of Transactions from API by Account ID",
+        "tags": [
+          "Transaction",
+          "Account"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The Account ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "number",
+                  "description": "the number of transactions"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/InternalServerErrorResponse"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/transactions/acct/{id}": {
+      "parameters": [
+        {
+          "in": "query",
+          "required": true,
+          "name": "limit",
+          "schema": {
+            "type": "number",
+            "example": 50
+          },
+          "description": "number of items per page"
+        },
+        {
+          "in": "query",
+          "required": true,
+          "name": "page",
+          "schema": {
+            "type": "number",
+            "example": 10
+          },
+          "description": "number of pages"
+        },
+        {
+          "in": "query",
+          "required": true,
+          "name": "order",
+          "schema": {
+            "type": "string",
+            "example": "asc"
+          },
+          "description": "sort order (asc/desc)"
+        }
+      ],
+      "get": {
+        "security": [],
+        "summary": "Get Transactions from API by Account ID",
+        "description": "Retrieves the transaction data from API by Account ID",
+        "tags": [
+          "Transaction",
+          "Account"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The Account ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "num_of_pages": {
+                      "type": "number",
+                      "description": "Number Of Pages"
+                    },
+                    "num_of_txns": {
+                      "type": "number",
+                      "description": "Number Of Transactions"
+                    },
+                    "items": {
+                      "description": "The Transactions",
+                      "type": "array",
+                      "items": {
+                        "allOf": [
+                          {
+                            "$ref": "#/components/schemas/TransactionData"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/InternalServerErrorResponse"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/search": {
+      "parameters": [
+        {
+          "in": "query",
+          "required": true,
+          "name": "key",
+          "schema": {
+            "type": "string",
+            "example": "226TEYMZSVDPKVXTYT7HGSTBKT2R5J6K4IWXSMMYFTKPMD66JZSBGVKJKY"
+          }
+        }
+      ],
+      "get": {
+        "security": [],
+        "summary": "Get Search Results by Key",
+        "description": "Retrieves search results by supplying a key, and in return the user will receive if this search key belongs to a block, account, asset, application or a transaction.  ",
+        "tags": [
+          "Search"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "block_hash_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if block hash is found"
+                    },
+                    "block_round_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if block round number is found"
+                    },
+                    "txn_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if transaction id is found"
+                    },
+                    "acct_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if account address is found"
+                    },
+                    "asset_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if asset id is found"
+                    },
+                    "application_found": {
+                      "type": "boolean",
+                      "example": false,
+                      "description": "if application id is found"
+                    }
+                  }
                 }
               }
             }
